feat: postMessage with current route

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -17,6 +17,11 @@
 
     :javascript
 
+      // Weni's addition to send a message to Connect about our current route
+      {% if use_weni_layout %}
+        window.parent.postMessage(window.location.pathname, "*")
+      {% endif %}
+
       window.supportEmail = '{{brand.support_email}}';
 
       function conditionalLoad(local, remote) {
