--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -2042,6 +2042,9 @@ code {
   }
 
 .formax .formax-section {
+    transition: all 200ms ease-in-out;
+    margin-left: 0px;
+    margin-right: 0px;
     --tw-bg-opacity: 1;
     background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
     border-radius: 0.5rem;
@@ -2114,7 +2117,26 @@ code {
           display: none;
         }
 
+.formax .formax-section.wide.open {
+      margin-left: -115px;
+      margin-right: -115px;
+    }
+
+.formax .formax-section.wide.open .formax-icon {
+        font-size: 50px;
+        padding-top: 0px;
+        flex-basis: 0px;
+      }
+
+.formax .formax-section.wide.open .formax-icon .i-container {
+          width: 0px;
+          margin-top: 20px;
+          margin-left:-25px;
+        }
+
 .formax .formax-section.open {
+      margin-left: -30px;
+      margin-right: -30px;
       --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
       box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     }
