--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -128,11 +128,10 @@
                                     - trans "New Group..."
 
                         -if org_perms.msgs.broadcast_send and not reply_disabled
-                          -trans 'Send Message' as button_title
-                            %temba-modax#send-message-modal(header='{{title|escapejs}}' endpoint="{% url 'msgs.broadcast_send' %}")
-                              .button-action(onclick="handleSendMessageClicked()")
-                                .mr-2.glyph.icon-bubble-3(style="font-size:14px")
-                                {{button_title}}
+                          %temba-modax#send-message-modal(header='{{_("Send Message")|escapejs}}' endpoint="{% url 'msgs.broadcast_send' %}")
+                            .button-action(onclick="handleSendMessageClicked()")
+                              .mr-2.glyph.icon-bubble-3(style="font-size:14px")
+                              -trans "Send"
 
                   .flex-grow.ml-1.self-end.items-end
                     .flex.flex-col.pr-12
