--- a/static/scss/tailwind.scss
+++ b/static/scss/tailwind.scss
@@ -242,24 +242,13 @@ a {
 .lbl-group.inverted {
   @apply text-light-alpha-900;
 
-  
-
-  &::before {
-    @apply text-light-alpha-900;
-    content: "\e03c";
-  }
-
   &.linked:hover {
     @apply no-underline cursor-pointer text-light-alpha-900;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06), inset 0 0 20px 20px rgba(0, 0, 0, .05);
   }
-}
 
-.lbl-group-dynamic {
-  @apply lbl-group;
-
-  &::before {
-    content: "\ebeb";
+  temba-icon {
+    --icon-color: rgba(255, 255, 255, .9);
   }
 }
 
