Added methods to update analytics data.

--- a/templates/reports/report_analytics.haml
+++ b/templates/reports/report_analytics.haml
@@ -7,6 +7,11 @@
   - for css in styles
     %link(rel='stylesheet' type='text/css' href='{{css}}')
 
+  :css
+    .footer {
+      display: none;
+    }
+
 - block extra-script
   = block.super
   - for script in scripts
