Added button for refresh chart data.

--- a/templates/reports/report_analytics.haml
+++ b/templates/reports/report_analytics.haml
@@ -22,7 +22,8 @@
     context.endpoints = {
       createUpdateReport: "{% url 'reports.report_create' %}",
       loadChartsData: "{% url 'reports.report_charts_data' %}",
-      deleteReport: "{% url 'reports.report_delete' %}"
+      deleteReport: "{% url 'reports.report_delete' %}",
+      refreshChartsData: "{% url 'reports.report_update_charts_data' %}"
     };
     showAnalytics(document.querySelector("#analytics-container"), context);
 
