--- a/templates/triggers/trigger_create.haml
+++ b/templates/triggers/trigger_create.haml
@@ -54,12 +54,12 @@
       display: none;
     }
 
--block title  
+-block title
   {{title}}
 
   .mb-3.text-xl.mt-2
     -trans "Triggers allow users to start flows based on user actions or schedules."
-  
+
 -block content
   -include "formax.haml"
 
@@ -69,10 +69,11 @@
   <script src="{{ STATIC_URL }}js/flow-parameters.js"></script>
   :javascript
 
-    ["keyword", "schedule", "missed_call", "new_conversation", "referral", "catchall"].forEach(triggerType => {
+    ["keyword", "schedule", "missed_call", "new_conversation", "referral", "catchall", "schedule-in-batch"].forEach(triggerType => {
       let triggerBody = document.querySelector(`#id-trigger-${triggerType}, #id-trigger-${triggerType.replace('_', '')}, #id-trigger-${triggerType.replace('_', '-')}`);
       if (triggerBody) {
-        let flowElement = triggerBody.querySelector(`#id_${triggerType}_flow`);
+        const typeOverride = triggerType === 'schedule-in-batch' ? 'schedule' : triggerType;
+        let flowElement = triggerBody.querySelector(`#id_${typeOverride}_flow`);
         flowElement.addEventListener('change', function(event) {
           let selectedValue = event.target.values[0].value;
           let flowId = (selectedValue !== '' ? parseInt(selectedValue) : null);
