--- a/templates/triggers/trigger_schedule_in_batch.haml
+++ b/templates/triggers/trigger_schedule_in_batch.haml
@@ -86,10 +86,10 @@
         .querySelector('temba-select').shadowRoot
         .querySelector('temba-field');
 
-      const helpTextNode = document.createElement('span');
+      const helpTextNode = document.createElement('div');
       const textNode = document.createTextNode('The batches will deploy in the order you add the group');
       helpTextNode.appendChild(textNode);
-      helpTextNode.setAttribute('class', 'help-text');
+      helpTextNode.setAttribute('style', 'font-size: 11px; margin-top: 6px; opacity: 1;');
       tembaField.appendChild(helpTextNode);
       const label = tembaField.shadowRoot.querySelector('label');
 
